# ------------------------------------------------------------------------------
# Copyright (C) 2010 ezbox project
# ------------------------------------------------------------------------------

ACLOCAL_AMFLAGS = -I m4

EXTRA_DIST = COPYING exported_symbols

SUBDIRS = . lib

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = libezcfg.pc

